project(circle_gardient)
project(mousePosition)
project(checkCollisionPointRec)
project(randomPixelWalking)
project(frameCounter)
project(checkCollisionRecs)
project(collisionWithWindow)
project(drawPoly)
project(eyeProject)
project(dvdProject)
project(drawCube)
project(camera3D)
project(drawShpereWires)
project(modelWithRaymath)
project(matrixMultiply)
project(loadingModel)
project(heightMapExample)
project(heightmapWithShader)
project(textureAnimated)
project(pixelSquareWalking)
project(tileMapColor)

add_executable(circle_gardient circle_gardient.cpp)
add_executable(mousePosition mousePosition.cpp)
add_executable(checkCollisionPointRec checkCollisionPointRec.cpp)
add_executable(randomPixelWalking randomPixelWalking.cpp)
add_executable(frameCounter frameCounter.cpp)
add_executable(checkCollisionRecs checkCollisionRecs.cpp)
add_executable(collisionWithWindow collisionWithWindow.cpp)
add_executable(drawPoly drawPoly.cpp)
add_executable(eyeProject eyeProject.cpp)
add_executable(dvdProject dvdProject.cpp)
add_executable(drawCube drawCube.cpp)
add_executable(camera3D camera3D.cpp)
add_executable(drawSphereWires drawSphereWires.cpp)
add_executable(modelWithRaymath modelWithRaymath.cpp)
add_executable(matrixMultiply matrixMultiply.cpp)
add_executable(loadingModel loadingModel.cpp)
add_executable(heightMapExample heightMapExample.cpp)
add_executable(heightmapWithShader heightmapWithShader.cpp)
add_executable(textureAnimated textureAnimated.cpp)
add_executable(pixelSquareWalking pixelSquareWalking.cpp)
add_executable(tileMapColor tileMapColor.cpp)

include_directories(
    PUBLIC ../external/raylib/include/
)

link_directories(
    PRIVATE ../external/raylib/src/
)

IF(WIN32)
    target_link_libraries(circle_gardient raylib opengl32 gdi32 winmm)
    target_link_libraries(mousePosition raylib opengl32 gdi32 winmm)
    target_link_libraries(checkCollisionPointRec raylib opengl32 gdi32 winmm)
    target_link_libraries(randomPixelWalking raylib opengl32 gdi32 winmm)
    target_link_libraries(frameCounter raylib opengl32 gdi32 winmm)
    target_link_libraries(checkCollisionRecs raylib opengl32 gdi32 winmm)
    target_link_libraries(collisionWithWindow raylib opengl32 gdi32 winmm)
    target_link_libraries(drawPoly raylib opengl32 gdi32 winmm)
    target_link_libraries(eyeProject raylib opengl32 gdi32 winmm)
    target_link_libraries(dvdProject raylib opengl32 gdi32 winmm)
    target_link_libraries(drawCube raylib opengl32 gdi32 winmm)
    target_link_libraries(camera3D raylib opengl32 gdi32 winmm)
    target_link_libraries(drawSphereWires raylib opengl32 gdi32 winmm)
    target_link_libraries(modelWithRaymath raylib opengl32 gdi32 winmm)
    target_link_libraries(matrixMultiply raylib opengl32 gdi32 winmm)
    target_link_libraries(loadingModel raylib opengl32 gdi32 winmm)
    target_link_libraries(heightMapExample raylib opengl32 gdi32 winmm)
    target_link_libraries(heightmapWithShader raylib opengl32 gdi32 winmm)
    target_link_libraries(textureAnimated raylib opengl32 gdi32 winmm)
    target_link_libraries(pixelSquareWalking raylib opengl32 gdi32 winmm)
    target_link_libraries(tileMapColor raylib opengl32 gdi32 winmm)
ELSEIF(UNIX)
    target_link_libraries(circle_gardient raylib)
    target_link_libraries(mousePosition raylib)
    target_link_libraries(checkCollisionPointRec raylib)
    target_link_libraries(randomPixelWalking raylib)
    target_link_libraries(frameCounter raylib)
    target_link_libraries(checkCollisionRecs raylib)
    target_link_libraries(collisionWithWindow raylib)
    target_link_libraries(drawPoly raylib)
    target_link_libraries(eyeProject raylib)
    target_link_libraries(dvdProject raylib)
    target_link_libraries(drawCube raylib)
    target_link_libraries(camera3D raylib)
    target_link_libraries(drawSphereWires raylib)
    target_link_libraries(modelWithRaymath raylib)
    target_link_libraries(matrixMultiply raylib)
    target_link_libraries(loadingModel raylib)
    target_link_libraries(heightMapExample raylib)
    target_link_libraries(heightmapWithShader raylib)
    target_link_libraries(textureAnimated raylib)
    target_link_libraries(pixelSquareWalking raylib)
    target_link_libraries(tileMapColor raylib)
ENDIF()
